Add the ability to use journald as an input https://www.elastic.co/guide/en/beats/filebeat/7.17/filebeat-input-journald.html

--- a/templates/input.yml.erb
+++ b/templates/input.yml.erb
@@ -21,6 +21,19 @@
   <%- elsif @input_type == 'syslog' -%>
   protocol.<%= @syslog_protocol %>:
     host: <%= @syslog_host %>
+  <%- elsif @input_type == 'journald' -%>
+  <%- if @journald_id -%>
+  <%- @journald_id.each do | id| -%>
+  id: <%= @journald_id %>
+  <%- end -%>
+  <%- end -%>
+  <%- if @journald_include_matches -%>
+  include_matches:
+    <%- @journald_include_matches.each do | match| -%>
+    - <%= match -%>
+    <%- end -%>
+  <%- end -%>
+  <%- end -%>
   <%- else -%>
   paths:
   <%- @paths.each do |log_path| -%>
