--- a/templates/input.yml.erb
+++ b/templates/input.yml.erb
@@ -29,8 +29,7 @@
     - <%= match -%>
     <%- end -%>
   <%- end -%>
-  <%- end -%>
-  <%- elsif @input_type != 'journald' -%>
+  <%- else -%>
   paths:
   <%- @paths.each do |log_path| -%>
   - <%= log_path %>
@@ -193,7 +192,6 @@
   # Note: Potential data loss. Make sure to read and understand the docs for this option.
   <%- if @close_timeout -%>
   close_timeout: <%= @close_timeout %>
-  <%- end -%>
   <%- end -%>
   <%- end -%>
   <%- # Everything below this can be applied to any input. -%>
